<resources>
    <string name="app_name">MyNews</string>
    <string name="welcome">Welcome to MyNews app \n fetches articles from \n NewYork Times APIs</string>
    <string name="action_search">Search</string>
    <string name="action_notifications">Notifications</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="topstories">Top Stories</string>
    <string name="mostpopular">Most Popular</string>
    <string name="technology">Technology</string>
    <string name="us">US</string>
    <string name="business">Business</string>
    <string name="sport">Sports</string>
    <string name="travel">Travel</string>
    <string name="fashion">Fashion</string>
    <string name="science">Science</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="automobiles">Automobiles</string>
    <string name="arts">Arts</string>
    <string name="world">World</string>
    <string name="health">Health</string>
    <string name="food">Food</string>
    <string name="politics">Politics</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies">Movies</string>
    <string name="books">Books</string>
    <string name="realestate">Real Estate</string>
    <string name="name">Created By Mutwakil Mo</string>
    <string name="OC">OpenClassrooms Project 7 : An Android news app that fetches news from The New York Times API.</string>
    <string name="close">Close</string>
    <string name="connection">Please check your connection status and try again</string>
    <string name="no_internet">No Internet</string>


</resources>
